# okkam

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: test_config.toml  test_dataset.csv
src/: common.rs  main.rs  util.rs
src/config/: error_measure.rs  ga_config.rs  mod.rs  okkam_config.rs  polynomial_config.rs
src/ga/: chromosome.rs  chromosome_with_fitness.rs  ga.rs  mod.rs
src/polynomial/: polynomial.rs
src/ui/: ui.rs
src/util/: args.rs  mod.rs  util.rs
tools/: generate_test_csv.py
