[package]
name = "okkam"
version = "0.1.0"
authors = ["Marcin Gorczyński <margorczynski@gmail.com>"]
edition = "2021"
repository = "https://github.com/margorczynski/okkam"
license = "Apache 2.0"

[dependencies]
log = "0.4.17"
simple_logger = "4.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tokio-executor-trait = "2.0.1"
tokio-reactor-trait = "1.1.0"
futures = "0.3.28"
serde = "1.0.159"
serde_json = "1.0.95"
config = "0.13.3"
plotters = { version = "0.3.4" }
itertools = "0.12.1"
ratatui = "0.26.2"
crossterm = "0.27.0"
half = { version = "2.4.1", features = ["alloc", "std", "num-traits"] }
csv = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
