[package]
name = "okkam"
version = "0.1.0"
authors = ["Marcin Gorczyński <margorczynski@gmail.com>"]
edition = "2021"
repository = "https://github.com/margorczynski/okkam"
license = "Apache 2.0"

[dependencies]
log = "0.4.17"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rayon = "1.7.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.9"
tokio-executor-trait = "2.0.1"
tokio-reactor-trait = "1.1.0"
futures = "0.3.28"
serde = "1.0.159"
serde_json = "1.0.95"
config = "0.13.3"
itertools = "0.12.1"
color-eyre = "0.6.2"
ratatui = "0.26.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
half = { version = "2.4.1", features = ["alloc", "std", "num-traits"] }
csv = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
flexi_logger = { version = "0.28.0", features = ["async"] }
